--- a/djangotutorial/aplicaciones/hojita/templates/gestionPlagas.html
+++ b/djangotutorial/aplicaciones/hojita/templates/gestionPlagas.html
@@ -1,22 +1,22 @@
-{% extends "./base.html" %}
+{% extends "base.html" %}
 
-{% block title %} GESTION DE USUARIOS {% endblock %}
+{% block title %} Gestión de Plagas {% endblock %}
 
 {% block body %}
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-    <H2>Gestion de usuarios</H2>
+    <H2>Gestion de Plagas</H2>
     <div class="card">
         <div class="card-body">
-            <form action="/registrarUsuario/" method="POST"> {% csrf_token %}
+            <form action="/registrarPlaga/" method="POST"> {% csrf_token %}
                 <div class="form-group">
-                    <input type="text" id="numiduser" name="numiduser" class="form-control" min="1" max="10" value="1" required>
+                    <input type="text" id="numidplaga" name="numidplaga" class="form-control" min="1" max="10" value="1" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="txtname" name="txtname" class="form-control" placeholder="name" maxlength="50" required>
+                    <input type="text" id="txtplaga" name="txtplaga" class="form-control" placeholder="Nombre de la plaga" maxlength="50" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" id="txtCorreo" name="txtCorreo" class="form-control" placeholder="correo" maxlength="30" required>
+                    <input type="text" id="txtdesc" name="txtdesc" class="form-control" placeholder="Descripcion" maxlength="300" required>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
@@ -26,27 +26,27 @@
     </div>
     </div>
     <div class="col-sm-12 col-md-6 col-lg-8 col-xl-8">
-        <h1>Listado de usuarios</h1>
+        <h1>Listado de Plagas</h1>
         <div class="table-responsive py-2">
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>#</th>
                         <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Correo</th>
+                        <th>Nombre De Plaga</th>
+                        <th>Descripcion</th>
                         <th colspan="2">Opciones</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for c in registro %}
+                    {% for c in plagas %}
                     <tr>
                         <td>{{forloop.counter}}</td>
-                       <td>{{c.IdUser}}</td>
-                       <td>{{c.NameUser}}</td>
-                       <td>{{c.CorreoUse}}</td>
-                       <td><a href="editarUser/{{c.IdUser}}" class="btn btn-info">Editar</a></td>
-                       <td><a href="borrarUser/{{c.IdUser}}" class="btn btn-danger btnEliminacion">Borrar</a></td>
+                       <td>{{c.IdPlaga}}</td>
+                       <td>{{c.NamePlaga}}</td>
+                       <td>{{c.DescPlaga}}</td>
+                       <td><a href="editarPlaga/{{c.IdPlaga}}" class="btn btn-info">Editar</a></td>
+                       <td><a href="borrarPlaga/{{c.IdPlaga}}" class="btn btn-danger btnEliminacion">Borrar</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
